# obs-script

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: RefCounted.h  ScriptMan.cpp  ScriptMan.h  ScriptModule.cpp  ScriptModule.h  TemplateUtils.h  obs-script.cpp  types.h
src/Exposed/: Source.cpp  Source.h  Text.cpp  Text.h
src/Interface/: Class.h  Context.h  Function.h  IContext.h  IScript.h  Script.h
src/Lua/: Class.cpp  Class.h  Context.cpp  Context.h  Function.cpp  Function.h  Script.cpp  Script.h  Utils.h
src/Reflection/: ClassRegistry.cpp  ClassRegistry.h  ClassWalker.h  Function.h
src/Utils/: Misc.cpp  Misc.h  ReadWriteMutex.cpp  ReadWriteMutex.h  TypeNames.cpp  TypeNames.h
test/: test.lua
